--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chai-http": "^3.0.0",
     "express": "^4.14.0",
     "mocha": "^3.2.0",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "jade": "^1.11.0"
   }
 }
